# simulation-in-python

./: README.md  pyproject.toml
notebooks/: integration.ipynb  摆球.ipynb
