[tool.poetry]
name = "simulation-in-python"
version = "0.1.0"
description = ""
authors = ["3gee <huangbaochenwo@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.11.1"
simpy = "^4.0.1"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
